# python-project-52

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_labels_name.py  0003_rename_labels_label.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0002_statuses_created_at.py  0003_alter_statuses_name.py  0003_rename_statuses_status.py
task_manager/: settings.py  urls.py  views.py
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tasklabel_task.py  0004_rename_tasks_task.py  0005_alter_task_labels_alter_task_name.py  0006_alter_tasklabel_label.py  0007_alter_task_labels_alter_task_status.py  0008_alter_task_executor.py
templates/: about.html  base.html  index.html  layout.html  navigation.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/registration/: login.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/users/: create.html  delete.html  index.html  update.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
