[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evgeny <zhek12322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^1.2.0"
Django = "^4.1.4"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
asgiref = "^3.5.2"
psycopg2 = "^2.9.5"
sqlparse = "^0.4.3"
whitenoise = "^6.2.0"
django-bootstrap4 = "^22.3"
django-filter = "^22.1"
rollbar = "^0.16.3"
python-gettext = "^4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
autopep8 = "^2.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
